# Aerstreamer-

aerstreamer/: CMakeLists.txt  README.md
aerstreamer/core/: json_router.cpp  json_router.h  recording_manager.cpp  recording_manager.h  session_manager.cpp  session_manager.h  stream_router.cpp  stream_router.h
aerstreamer/media/: codec_detector.cpp  codec_detector.h  gst_pipeline.cpp  gst_pipeline.h
aerstreamer/network/: json_server.cpp  json_server.h  rtp_server.cpp  rtp_server.h
aerstreamer/publisher/: fastapi_mavlink_telemetry_publisher.py  json_publisher.cpp  publisher.cpp  thermal_publisher.cpp  video_publisher.cpp
aerstreamer/recording/: stream_recorder.cpp  stream_recorder.h
aerstreamer/scripts/: run_fastapi_mavlink_bridge.sh  run_json_publisher.sh  run_minio.sh  run_rgb_publisher.sh  run_server.sh  run_thermal_publisher.sh
aerstreamer/server/: config.h  main.cpp
aerstreamer/storage/: minio_client.cpp  minio_client.h  upload_worker.cpp  upload_worker.h
aerstreamer/web_gateway/: http_server.cpp  http_server.h  websocket_server.cpp  websocket_server.h
aerstreamer/web_viewer/: index.html  style.css  viewer.js
